--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,10 +40,20 @@ android {
     }
 
     buildTypes {
+        debug {
+            applicationIdSuffix ".debug"
+            minifyEnabled false
+            shrinkResources false
+
+            buildConfigField "String", "OPENSUBTITLES_API_KEY", "\"5CZlDmqIhLoRcalZHXItm5Thwq57MDE2\""
+        }
+
         release {
             minifyEnabled false
             shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
+            buildConfigField "String", "OPENSUBTITLES_API_KEY", "\"qK9RpmABGZjtuxYv0Yf30exR2E39Ivsj\""
         }
     }
     compileOptions {
@@ -52,19 +62,6 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
-    }
-
-    buildTypes {
-        debug {
-            applicationIdSuffix ".debug"
-            minifyEnabled false
-            shrinkResources false
-        }
-
-        release {
-            minifyEnabled false
-            shrinkResources false
-        }
     }
 
     buildFeatures {
@@ -152,7 +149,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-cast-framework:21.0.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'org.jsoup:jsoup:1.14.3'
     implementation 'org.slf4j:slf4j-api:1.7.32'
     implementation 'com.github.tony19:logback-android:2.0.0'
     implementation 'com.stephentuso:welcome:1.4.1'
