Fix cast framework unavailable issue

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -220,9 +220,9 @@
         <meta-data
             android:name="com.google.android.gms.cast.framework.OPTIONS_PROVIDER_CLASS_NAME"
             android:value="com.amaze.fileutilities.cast.CastOptionsProvider" />
-        <!--<meta-data
+        <meta-data
             android:name="com.google.mlkit.vision.DEPENDENCIES"
-            android:value="ocr,face" />-->
+            android:value="ocr,face" />
     </application>
 
 </manifest>
