--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ plugins {
     id 'com.hiya.jacoco-android'
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
+    id("com.github.triplet.play") version "3.7.0"
 }
 
 android {
@@ -32,8 +33,8 @@ android {
         applicationId "com.amaze.fileutilities"
         minSdk 19
         targetSdk 30
-        versionCode 16
-        versionName "1.15"
+        versionCode 17
+        versionName "1.16"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -51,6 +52,7 @@ android {
         release {
             minifyEnabled false
             shrinkResources false
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
             buildConfigField "String", "OPENSUBTITLES_API_KEY", "\"qK9RpmABGZjtuxYv0Yf30exR2E39Ivsj\""
@@ -86,6 +88,17 @@ android {
         pickFirst 'META-INF/LICENSE.txt'
         pickFirst 'META-INF/INDEX.LIST'
     }
+}
+
+play {
+    serviceAccountCredentials.set(file("useful-cathode-91310-9986d18df1a5.json"))
+    defaultToAppBundles.set(true)
+
+//    track.set("internal")
+    track.set("production")
+    userFraction.set(1.0d)
+    updatePriority.set(5)
+    releaseStatus.set(com.github.triplet.gradle.androidpublisher.ReleaseStatus.COMPLETED)
 }
 
 dependencies {
