--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,7 +62,7 @@
             android:exported="true"
             android:label="@string/image_viewer"
             android:excludeFromRecents="true"
-            android:theme="@style/Custom.Dialog.Dark">
+            android:theme="@style/Custom.Dialog.Dark.NoStretch">
             <intent-filter
                 android:label="@string/intent_image_viewer"
                 tools:ignore="AppLinkUrlError">
@@ -81,7 +81,7 @@
             android:supportsPictureInPicture="true"
             android:launchMode="singleTask"
             android:excludeFromRecents="true"
-            android:theme="@style/Custom.Dialog.Dark">
+            android:theme="@style/Custom.Dialog.Dark.NoStretch">
             <intent-filter
                 android:label="@string/intent_video_player"
                 tools:ignore="AppLinkUrlError">
@@ -141,7 +141,7 @@
             android:name=".epub_viewer.EpubViewerActivity"
             android:exported="true"
             android:label="@string/epub_viewer"
-            android:theme="@style/Custom.Dialog.Dark">
+            android:theme="@style/Theme.AmazeFileUtilities">
             <intent-filter
                 android:label="@string/epub_viewer"
                 tools:ignore="AppLinkUrlError">
