--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,8 @@ android {
         applicationId "com.amaze.fileutilities"
         minSdk 19
         targetSdk 30
-        versionCode 40
-        versionName "1.39"
+        versionCode 41
+        versionName "1.40"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -94,8 +94,8 @@ play {
     serviceAccountCredentials.set(file("useful-cathode-91310-9986d18df1a5.json"))
     defaultToAppBundles.set(true)
 
-//    track.set("internal")
-    track.set("production")
+    track.set("internal")
+//    track.set("production")
     userFraction.set(1.0d)
     updatePriority.set(1)
     releaseStatus.set(com.github.triplet.gradle.androidpublisher.ReleaseStatus.COMPLETED)
