--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,8 @@ android {
     buildTypes {
         debug {
             applicationIdSuffix ".debug"
-            minifyEnabled true
-            shrinkResources true
+            minifyEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
             buildConfigField "String", "OPENSUBTITLES_API_KEY", "\"5CZlDmqIhLoRcalZHXItm5Thwq57MDE2\""
@@ -98,7 +98,7 @@ play {
 //    track.set("internal")
     track.set("production")
     userFraction.set(1.0d)
-    updatePriority.set(2)
+    updatePriority.set(1)
     releaseStatus.set(com.github.triplet.gradle.androidpublisher.ReleaseStatus.COMPLETED)
 }
 
