--- a/.github/workflows/android-main.yml
+++ b/.github/workflows/android-main.yml
@@ -39,13 +39,13 @@ jobs:
           cache: 'gradle'
       - name: Build with Gradle
         run: |
-          ./gradlew assembleRelease
+          ./gradlew assembleDebug
         env:
           TZ: UTC
       - name: Publish on Telegram
         run: |
           COMMIT_COUNT=$(git rev-list --count ${GITHUB_REF})
-          cp app/build/outputs/apk/release/app-arm64-v8a-debug.apk app/build/outputs/apk/release/amaze-utils-arm64-v8a-v0.1-$(echo $COMMIT_COUNT).apk
-          cp app/build/outputs/apk/release/app-armeabi-v7a-debug.apk app/build/outputs/apk/release/amaze-utils-armeabi-v7a-v0.1-$(echo $COMMIT_COUNT).apk
-          echo $(curl -v -F "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}" --header "Content-Type: multipart/form-data" -F document=@app/build/outputs/apk/release/amaze-utils-arm64-v8a-v0.1-$(echo $COMMIT_COUNT).apk https://api.telegram.org/${{ secrets.AMAZE_BOT_ID }}:${{ secrets.TELEGRAM_INTEGRATION_KEY }}/sendDocument)
-          echo $(curl -v -F "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}" --header "Content-Type: multipart/form-data" -F document=@app/build/outputs/apk/release/amaze-utils-armeabi-v7a-v0.1-$(echo $COMMIT_COUNT).apk https://api.telegram.org/${{ secrets.AMAZE_BOT_ID }}:${{ secrets.TELEGRAM_INTEGRATION_KEY }}/sendDocument)
+          cp app/build/outputs/apk/debug/app-arm64-v8a-debug.apk app/build/outputs/apk/debug/amaze-utils-arm64-v8a-v0.1-$(echo $COMMIT_COUNT).apk
+          cp app/build/outputs/apk/debug/app-armeabi-v7a-debug.apk app/build/outputs/apk/debug/amaze-utils-armeabi-v7a-v0.1-$(echo $COMMIT_COUNT).apk
+          echo $(curl -v -F "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}" --header "Content-Type: multipart/form-data" -F document=@app/build/outputs/apk/debug/amaze-utils-arm64-v8a-v0.1-$(echo $COMMIT_COUNT).apk https://api.telegram.org/${{ secrets.AMAZE_BOT_ID }}:${{ secrets.TELEGRAM_INTEGRATION_KEY }}/sendDocument)
+          echo $(curl -v -F "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}" --header "Content-Type: multipart/form-data" -F document=@app/build/outputs/apk/debug/amaze-utils-armeabi-v7a-v0.1-$(echo $COMMIT_COUNT).apk https://api.telegram.org/${{ secrets.AMAZE_BOT_ID }}:${{ secrets.TELEGRAM_INTEGRATION_KEY }}/sendDocument)
