--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,7 +60,7 @@
         <activity
             android:name=".image_viewer.ImageViewerDialogActivity"
             android:exported="true"
-            android:label="@string/intent_image_viewer_dialog"
+            android:label="@string/intent_image_viewer"
             android:excludeFromRecents="true"
             android:theme="@style/Custom.Dialog.Dark.NoStretch">
             <intent-filter
@@ -76,7 +76,7 @@
         </activity>
         <activity
             android:name=".image_viewer.ImageViewerActivity"
-            android:label="@string/intent_image_viewer_full_screen"
+            android:label="@string/intent_image_viewer"
             android:theme="@style/Theme.AmazeFileUtilities.FullScreen.Dark">
             <intent-filter
                 android:label="@string/intent_image_viewer_full_screen"
@@ -92,7 +92,7 @@
         <activity
             android:name=".video_player.VideoPlayerDialogActivity"
             android:exported="true"
-            android:label="@string/video_player_dialog"
+            android:label="@string/video_player"
             android:supportsPictureInPicture="true"
             android:launchMode="singleTask"
             android:excludeFromRecents="true"
@@ -110,7 +110,7 @@
         </activity>
         <activity
             android:name=".video_player.VideoPlayerActivity"
-            android:label="@string/video_player_full_screen"
+            android:label="@string/video_player"
             android:supportsPictureInPicture="true"
             android:resizeableActivity="true"
             android:launchMode="singleTask"
