--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,8 @@ android {
         applicationId "com.amaze.fileutilities"
         minSdk 19
         targetSdk 30
-        versionCode 48
-        versionName "1.47"
+        versionCode 49
+        versionName "1.48"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -168,6 +168,8 @@ dependencies {
     implementation 'com.stephentuso:welcome:1.4.1'
     implementation("com.android.billingclient:billing:$billing_version")
     implementation 'me.tankery.lib:circularSeekBar:1.4.0'
+    implementation 'com.github.qoqa:glide-svg:2.0.4'
+    api "com.caverock:androidsvg:1.4"
 
     //Detect memory leaks
 //    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
