--- a/gradle.properties
+++ b/gradle.properties
@@ -24,4 +24,4 @@ kotlin.code.style=official
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 org.gradle.parallel=true
 # for macs, omit for other operating systems
-org.gradle.java.home=/Applications/Android Studio.app/Contents/jre/Contents/Home
+#org.gradle.java.home=/Applications/Android Studio.app/Contents/jre/Contents/Home
