--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         android:requestLegacyExternalStorage="true"
         android:theme="@style/Theme.AmazeFileUtilities"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:extractNativeLibs="false"
         >
         <activity
             android:name=".home_page.MainActivity"
