--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,18 +97,26 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".image_viewer.ImageEditorActivity"
-            android:label="@string/image_viewer"
+            android:name=".image_viewer.editor.EditImageActivity"
+            android:label="@string/image_editor"
             android:theme="@style/Theme.AmazeFileUtilities.FullScreen.Dark">
             <intent-filter
-                android:label="@string/image_viewer"
+                android:label="@string/image_editor"
                 tools:ignore="AppLinkUrlError">
                 <action android:name="android.intent.action.VIEW" />
-
                 <data android:mimeType="image/*" />
-
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.OPENABLE" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="action_nextgen_edit" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="image/*" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.EDIT" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="image/*" />
             </intent-filter>
         </activity>
         <activity
