Changes in image editor; minor fixes in files live data loading

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -180,6 +180,7 @@ dependencies {
     implementation 'com.github.qoqa:glide-svg:2.0.4'
     api "com.caverock:androidsvg:1.4"
     implementation 'com.burhanrashid52:photoeditor:2.0.0'
+    implementation 'com.github.CanHub:Android-Image-Cropper:4.3.1'
 
     //Detect memory leaks
 //    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
