--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
             android:label="@string/app_name_launcher"
             android:theme="@style/Theme.AmazeFileUtilities.Dark"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysVisible"
             tools:ignore="LockedOrientationActivity">
             <nav-graph android:value="@navigation/mobile_navigation" />
             <intent-filter>
@@ -99,7 +100,8 @@
         <activity
             android:name=".image_viewer.editor.EditImageActivity"
             android:label="@string/image_editor"
-            android:theme="@style/Theme.AmazeFileUtilities.FullScreen.Dark">
+            android:theme="@style/Theme.AmazeFileUtilities.FullScreen.Dark"
+            android:windowSoftInputMode="stateAlwaysVisible">
             <intent-filter
                 android:label="@string/image_editor"
                 tools:ignore="AppLinkUrlError">
