--- a/.github/workflows/android-main.yml
+++ b/.github/workflows/android-main.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - 'main'
       - 'release/*'
+      - 'feature'
 
 concurrency:
   group: build-${{ github.event.pull_request.number || github.ref }}
@@ -45,9 +46,10 @@ jobs:
       - name: Publish on Telegram
         run: |
           COMMIT_COUNT=$(git rev-list --count ${GITHUB_REF})
-          7z a -t7z -m0=lzma -mx=9 -mfb=64 -md=32m -ms=on app/build/outputs/apk/debug/app-arm64-v8a-debug.7z app/build/outputs/apk/debug/app-arm64-v8a-debug.apk
-          7z a -t7z -m0=lzma -mx=9 -mfb=64 -md=32m -ms=on app/build/outputs/apk/debug/app-armeabi-v7a-debug.7z app/build/outputs/apk/debug/app-armeabi-v7a-debug.apk
-          cp app/build/outputs/apk/debug/app-arm64-v8a-debug.7z app/build/outputs/apk/debug/amaze-utils-arm64-v8a-v0.1-$(echo $COMMIT_COUNT).7z
-          cp app/build/outputs/apk/debug/app-armeabi-v7a-debug.7z app/build/outputs/apk/debug/amaze-utils-armeabi-v7a-v0.1-$(echo $COMMIT_COUNT).7z
-          echo $(curl -v -F "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}" --header "Content-Type: multipart/form-data" -F document=@app/build/outputs/apk/debug/amaze-utils-arm64-v8a-v0.1-$(echo $COMMIT_COUNT).7z https://api.telegram.org/${{ secrets.AMAZE_BOT_ID }}:${{ secrets.TELEGRAM_INTEGRATION_KEY }}/sendDocument)
-          echo $(curl -v -F "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}" --header "Content-Type: multipart/form-data" -F document=@app/build/outputs/apk/debug/amaze-utils-armeabi-v7a-v0.1-$(echo $COMMIT_COUNT).7z https://api.telegram.org/${{ secrets.AMAZE_BOT_ID }}:${{ secrets.TELEGRAM_INTEGRATION_KEY }}/sendDocument)
+          cd app/build/outputs/apk/debug
+          7z a -t7z -m0=lzma -mx=9 -mfb=64 -md=32m -ms=on app-arm64-v8a-debug.7z app-arm64-v8a-debug.apk
+          7z a -t7z -m0=lzma -mx=9 -mfb=64 -md=32m -ms=on app-armeabi-v7a-debug.7z app-armeabi-v7a-debug.apk
+          cp app-arm64-v8a-debug.7z amaze-utils-arm64-v8a-v0.1-$(echo $COMMIT_COUNT).7z
+          cp app-armeabi-v7a-debug.7z amaze-utils-armeabi-v7a-v0.1-$(echo $COMMIT_COUNT).7z
+          echo $(curl -v -F "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}" --header "Content-Type: multipart/form-data" -F document=@amaze-utils-arm64-v8a-v0.1-$(echo $COMMIT_COUNT).7z https://api.telegram.org/${{ secrets.AMAZE_BOT_ID }}:${{ secrets.TELEGRAM_INTEGRATION_KEY }}/sendDocument)
+          echo $(curl -v -F "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}" --header "Content-Type: multipart/form-data" -F document=@amaze-utils-armeabi-v7a-v0.1-$(echo $COMMIT_COUNT).7z https://api.telegram.org/${{ secrets.AMAZE_BOT_ID }}:${{ secrets.TELEGRAM_INTEGRATION_KEY }}/sendDocument)
