--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
             android:name=".home_page.MainActivity"
             android:exported="true"
             android:label="@string/app_name_launcher"
-            android:theme="@style/Theme.AmazeFileUtilities.Dark"
+            android:theme="@style/Theme.AmazeFileUtilities"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysVisible"
             tools:ignore="LockedOrientationActivity"
@@ -244,7 +244,7 @@
         <activity
             android:name=".home_page.ui.options.AboutActivity"
             android:exported="true"
-            android:theme="@style/Custom.Dialog.Dark"
+            android:theme="@style/Theme.AmazeFileUtilities.Dark"
             android:launchMode="singleInstance">
         </activity>
 
