--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -244,7 +244,7 @@
         <activity
             android:name=".home_page.ui.options.AboutActivity"
             android:exported="true"
-            android:theme="@style/Theme.AmazeFileUtilities.Dark"
+            android:theme="@style/Custom.Dialog.Dark"
             android:launchMode="singleInstance">
         </activity>
 
