--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,18 @@ android {
         buildConfigField "String", "BASE_API_STICKER_PACK", "new String()"
         buildConfigField "String", "API_REQ_TRIAL_URI", "new String()"
         buildConfigField "String", "API_REQ_TRIAL_AUTH_TOKEN", "new String()"
+        buildConfigField "String", "API_REQ_TRIAL_APP_HASH", "new String()"
+        buildConfigField "Integer", "API_REQ_TRIAL_CODE_TRIAL_ACTIVE", "new Integer()"
+        buildConfigField "Integer", "API_REQ_TRIAL_CODE_TRIAL_EXPIRED", "new Integer()"
+        buildConfigField "Integer", "API_REQ_TRIAL_CODE_TRIAL_INACTIVE", "new Integer()"
+        buildConfigField "Integer", "API_REQ_TRIAL_CODE_TRIAL_EXCLUSIVE", "new Integer()"
+        buildConfigField "Integer", "API_REQ_TRIAL_CODE_TRIAL_UNOFFICIAL", "new Integer()"
+        buildConfigField "String", "API_REQ_TRIAL_TRIAL_ACTIVE", "new String()"
+        buildConfigField "String", "API_REQ_TRIAL_TRIAL_EXPIRED", "new String()"
+        buildConfigField "String", "API_REQ_TRIAL_TRIAL_INACTIVE", "new String()"
+        buildConfigField "String", "API_REQ_TRIAL_TRIAL_EXCLUSIVE", "new String()"
+        buildConfigField "String", "API_REQ_TRIAL_TRIAL_UNOFFICIAL", "new String()"
+        buildConfigField "String", "API_REQ_TRIAL_YEARLY", "new String()"
         buildConfigField "String", "API_REQ_STICKER_PACK_TOKEN", "new String()"
         buildConfigField "String", "OPENSUBTITLES_API_KEY", "new String()"
     }
@@ -56,10 +68,35 @@ android {
                 appProps.containsKey('API_REQ_TRIAL_URI') &&
                 appProps.containsKey('API_REQ_TRIAL_AUTH_TOKEN') &&
                 appProps.containsKey('BASE_API_STICKER_PACK') &&
-                appProps.containsKey('API_REQ_STICKER_PACK_TOKEN')) {
+                appProps.containsKey('API_REQ_TRIAL_APP_HASH') &&
+                appProps.containsKey('API_REQ_TRIAL_CODE_TRIAL_ACTIVE') &&
+                appProps.containsKey('API_REQ_TRIAL_CODE_TRIAL_EXPIRED') &&
+                appProps.containsKey('API_REQ_TRIAL_CODE_TRIAL_INACTIVE') &&
+                appProps.containsKey('API_REQ_TRIAL_CODE_TRIAL_EXCLUSIVE') &&
+                appProps.containsKey('API_REQ_TRIAL_CODE_TRIAL_UNOFFICIAL') &&
+                appProps.containsKey('API_REQ_TRIAL_TRIAL_ACTIVE') &&
+                appProps.containsKey('API_REQ_TRIAL_TRIAL_EXPIRED') &&
+                appProps.containsKey('API_REQ_TRIAL_TRIAL_INACTIVE') &&
+                appProps.containsKey('API_REQ_TRIAL_TRIAL_EXCLUSIVE') &&
+                appProps.containsKey('API_REQ_TRIAL_TRIAL_UNOFFICIAL') &&
+                appProps.containsKey('API_REQ_TRIAL_YEARLY') &&
+                appProps.containsKey('API_REQ_STICKER_PACK_TOKEN')
+        ) {
             buildConfigField "String", "BASE_CLOUD_FUNC", appProps["BASE_CLOUD_FUNC"]
             buildConfigField "String", "BASE_API_STICKER_PACK", appProps["BASE_API_STICKER_PACK"]
             buildConfigField "String", "API_REQ_TRIAL_URI", appProps["API_REQ_TRIAL_URI"]
+            buildConfigField "String", "API_REQ_TRIAL_APP_HASH", appProps["API_REQ_TRIAL_APP_HASH"]
+            buildConfigField "Integer", "API_REQ_TRIAL_CODE_TRIAL_ACTIVE", appProps["API_REQ_TRIAL_CODE_TRIAL_ACTIVE"]
+            buildConfigField "Integer", "API_REQ_TRIAL_CODE_TRIAL_EXPIRED", appProps["API_REQ_TRIAL_CODE_TRIAL_EXPIRED"]
+            buildConfigField "Integer", "API_REQ_TRIAL_CODE_TRIAL_INACTIVE", appProps["API_REQ_TRIAL_CODE_TRIAL_INACTIVE"]
+            buildConfigField "Integer", "API_REQ_TRIAL_CODE_TRIAL_EXCLUSIVE", appProps["API_REQ_TRIAL_CODE_TRIAL_EXCLUSIVE"]
+            buildConfigField "Integer", "API_REQ_TRIAL_CODE_TRIAL_UNOFFICIAL", appProps["API_REQ_TRIAL_CODE_TRIAL_UNOFFICIAL"]
+            buildConfigField "String", "API_REQ_TRIAL_TRIAL_ACTIVE", appProps["API_REQ_TRIAL_TRIAL_ACTIVE"]
+            buildConfigField "String", "API_REQ_TRIAL_TRIAL_EXPIRED", appProps["API_REQ_TRIAL_TRIAL_EXPIRED"]
+            buildConfigField "String", "API_REQ_TRIAL_TRIAL_INACTIVE", appProps["API_REQ_TRIAL_TRIAL_INACTIVE"]
+            buildConfigField "String", "API_REQ_TRIAL_TRIAL_EXCLUSIVE", appProps["API_REQ_TRIAL_TRIAL_EXCLUSIVE"]
+            buildConfigField "String", "API_REQ_TRIAL_TRIAL_UNOFFICIAL", appProps["API_REQ_TRIAL_TRIAL_UNOFFICIAL"]
+            buildConfigField "String", "API_REQ_TRIAL_YEARLY", appProps["API_REQ_TRIAL_YEARLY"]
             buildConfigField "String", "API_REQ_STICKER_PACK_TOKEN", appProps["API_REQ_STICKER_PACK_TOKEN"]
             buildConfigField "String", "API_REQ_TRIAL_AUTH_TOKEN", appProps["API_REQ_TRIAL_AUTH_TOKEN"]
         } else {
@@ -67,16 +104,33 @@ android {
             buildConfigField "String", "BASE_CLOUD_FUNC", "new String()"
             buildConfigField "String", "BASE_API_STICKER_PACK", "new String()"
             buildConfigField "String", "API_REQ_TRIAL_URI", "new String()"
+            buildConfigField "String", "API_REQ_TRIAL_APP_HASH", "new String()"
+            buildConfigField "String", "API_REQ_TRIAL_CODE_TRIAL_ACTIVE", "new Integer()"
+            buildConfigField "String", "API_REQ_TRIAL_CODE_TRIAL_EXPIRED", "new Integer()"
+            buildConfigField "String", "API_REQ_TRIAL_CODE_TRIAL_INACTIVE", "new Integer()"
+            buildConfigField "String", "API_REQ_TRIAL_CODE_TRIAL_EXCLUSIVE", "new Integer()"
+            buildConfigField "Integer", "API_REQ_TRIAL_CODE_TRIAL_UNOFFICIAL", "new Integer()"
+            buildConfigField "String", "API_REQ_TRIAL_TRIAL_ACTIVE", "new String()"
+            buildConfigField "String", "API_REQ_TRIAL_TRIAL_EXPIRED", "new String()"
+            buildConfigField "String", "API_REQ_TRIAL_TRIAL_INACTIVE", "new String()"
+            buildConfigField "String", "API_REQ_TRIAL_TRIAL_EXCLUSIVE", "new String()"
+            buildConfigField "String", "API_REQ_TRIAL_TRIAL_UNOFFICIAL", "new String()"
+            buildConfigField "String", "API_REQ_TRIAL_YEARLY", "new String()"
             buildConfigField "String", "API_REQ_STICKER_PACK_TOKEN", "new String()"
             buildConfigField "String", "API_REQ_TRIAL_AUTH_TOKEN", "new String()"
         }
     }
 
+    signingConfigs {
+        release
+        config
+    }
+
     buildTypes {
         debug {
             applicationIdSuffix ".debug"
-            minifyEnabled true
-            shrinkResources true
+            minifyEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             if (appProps != null &&
                     appProps.containsKey('OPENSUBTITLES_API_KEY_DEBUG')) {
@@ -114,6 +168,21 @@ android {
         viewBinding true
     }
 
+    flavorDimensions 'static'
+
+    productFlavors {
+        fdroid {
+            dimension 'static'
+            buildConfigField "boolean", "IS_VERSION_FDROID", "true"
+        }
+
+        play {
+            dimension 'static'
+            buildConfigField "boolean", "IS_VERSION_FDROID", "false"
+            signingConfig signingConfigs.config
+        }
+    }
+
     splits {
         abi {
             enable true
@@ -145,10 +214,10 @@ play {
     serviceAccountCredentials.set(file("service_account_config.json"))
     defaultToAppBundles.set(true)
 
-    track.set("internal")
-//    track.set("production")
+//    track.set("internal")
+    track.set("production")
     userFraction.set(1.0d)
-    updatePriority.set(3)
+    updatePriority.set(5)
     releaseStatus.set(com.github.triplet.gradle.androidpublisher.ReleaseStatus.COMPLETED)
 }
 
@@ -166,7 +235,7 @@ dependencies {
         // Excludes the support library because it's already included by Glide.
         transitive = false
     }
-    implementation 'com.google.android.play:core-ktx:1.8.1'
+    playImplementation 'com.google.android.play:core-ktx:1.8.1'
     kapt "com.github.bumptech.glide:compiler:$glideVersion"
     implementation 'androidx.webkit:webkit:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
@@ -204,8 +273,8 @@ dependencies {
     kapt "androidx.room:room-compiler:$roomVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.1.0"
     implementation "androidx.preference:preference-ktx:1.2.0"
-    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:18.0.0'
-    implementation 'com.google.android.gms:play-services-mlkit-face-detection:17.0.1'
+    playImplementation 'com.google.android.gms:play-services-mlkit-text-recognition:18.0.0'
+    playImplementation 'com.google.android.gms:play-services-mlkit-face-detection:17.0.1'
 //    implementation 'com.google.mlkit:face-detection:16.1.5'
 
     implementation 'com.afollestad.material-dialogs:files:3.3.0'
@@ -216,7 +285,7 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:1.7.32'
     implementation 'com.github.tony19:logback-android:2.0.0'
     implementation 'com.stephentuso:welcome:1.4.1'
-    implementation("com.android.billingclient:billing:$billing_version")
+    playImplementation("com.android.billingclient:billing:$billing_version")
     implementation 'me.tankery.lib:circularSeekBar:1.4.0'
     implementation 'com.github.qoqa:glide-svg:2.0.4'
     api "com.caverock:androidsvg:1.4"
