--- a/app/build.gradle
+++ b/app/build.gradle
@@ -279,7 +279,7 @@ dependencies {
 
     implementation 'com.afollestad.material-dialogs:files:3.3.0'
     implementation 'androidx.mediarouter:mediarouter:1.2.6'
-    implementation 'com.google.android.gms:play-services-cast-framework:21.0.1'
+    playImplementation 'com.google.android.gms:play-services-cast-framework:21.0.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'org.slf4j:slf4j-api:1.7.32'
